--- a/SynthTest/SynthTest.vcxproj.filters
+++ b/SynthTest/SynthTest.vcxproj.filters
@@ -68,5 +68,8 @@
     <ClCompile Include="..\JUCE\modules\juce_data_structures\juce_data_structures.cpp">
       <Filter>JUCE</Filter>
     </ClCompile>
+    <ClCompile Include="..\JUCE\modules\juce_gui_extra\juce_gui_extra.cpp">
+      <Filter>JUCE</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
