--- a/SynthLib/SynthLib.vcxproj
+++ b/SynthLib/SynthLib.vcxproj
@@ -100,9 +100,11 @@
     <ClInclude Include="Defines.h" />
     <ClInclude Include="Filter.h" />
     <ClInclude Include="Frame.h" />
+    <ClInclude Include="Interpolator.hpp" />
     <ClInclude Include="LFO.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MasterModule.h" />
+    <ClInclude Include="Math.hpp" />
     <ClInclude Include="Module.h" />
     <ClInclude Include="NoiseGen.h" />
     <ClInclude Include="Oscillator.h" />
@@ -110,13 +112,16 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Voice.h" />
+    <ClInclude Include="Wavetable.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EnvelopeGen.cpp" />
     <ClCompile Include="Filter.cpp" />
+    <ClCompile Include="Interpolator.cpp" />
     <ClCompile Include="LFO.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="MasterModule.cpp" />
+    <ClCompile Include="Math.cpp" />
     <ClCompile Include="Module.cpp" />
     <ClCompile Include="NoiseGen.cpp" />
     <ClCompile Include="Oscillator.cpp" />
@@ -126,6 +131,8 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Voice.cpp" />
+    <ClCompile Include="Wavetable.cpp" />
+    <ClCompile Include="WaveTableSSE.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
