--- a/SynthPresets/init.yaml
+++ b/SynthPresets/init.yaml
@@ -3,14 +3,15 @@ osc:
     shape:     saw
     pitch:     -12.0
     stereo:    0.0
-    subvoices: 1
+    subvoices: 16
+    detune:    0.01
 
 env:
     name:    adsr
-    attack:  0.0
+    attack:  0.01
     decay:   0.0
     sustain: 1.0
-    release: 0.0
+    release: 0.01
 
 link:
     src:      adsr
@@ -21,4 +22,4 @@ link:
     src:      osc
     dest:     master
     destPort: input
-    scale:    0.2
+    scale:    0.5
