--- a/SynthLib/SynthLib.vcxproj
+++ b/SynthLib/SynthLib.vcxproj
@@ -100,7 +100,6 @@
     <ClInclude Include="Defines.h" />
     <ClInclude Include="Filter.h" />
     <ClInclude Include="Frame.h" />
-    <ClInclude Include="Interpolator.hpp" />
     <ClInclude Include="LFO.h" />
     <ClInclude Include="Logger.h" />
     <ClInclude Include="MasterModule.h" />
@@ -112,12 +111,13 @@
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
     <ClInclude Include="Voice.h" />
-    <ClInclude Include="Wavetable.hpp" />
+    <ClInclude Include="Wavetable\Downsampler.hpp" />
+    <ClInclude Include="Wavetable\Interpolator.hpp" />
+    <ClInclude Include="Wavetable\Wavetable.hpp" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="EnvelopeGen.cpp" />
     <ClCompile Include="Filter.cpp" />
-    <ClCompile Include="Interpolator.cpp" />
     <ClCompile Include="LFO.cpp" />
     <ClCompile Include="Logger.cpp" />
     <ClCompile Include="MasterModule.cpp" />
@@ -131,8 +131,18 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
     </ClCompile>
     <ClCompile Include="Voice.cpp" />
-    <ClCompile Include="Wavetable.cpp" />
-    <ClCompile Include="WaveTableSSE.cpp" />
+    <ClCompile Include="Wavetable\Interpolator.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../stdafx.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../stdafx.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Wavetable\Wavetable.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../stdafx.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../stdafx.h</PrecompiledHeaderFile>
+    </ClCompile>
+    <ClCompile Include="Wavetable\WaveTableSSE.cpp">
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">../stdafx.h</PrecompiledHeaderFile>
+      <PrecompiledHeaderFile Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">../stdafx.h</PrecompiledHeaderFile>
+    </ClCompile>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
